force-app/main/default/objects/Clinical_Assessment__c/Clinical_Assessment__c.object-meta.xml
<CustomObject>
    <label>Clinical Assessment</label>
    <nameField>
        <displayFormat>CA-{YYYY}-{0000000}</displayFormat>
        <label>Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>