force-app/main/default/objects/Clinical_Assessment__c/fields/Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assessment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>