force-app/main/default/objects/Clinical_Assessment__c/fields/Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Type__c</fullName>
    <label>Assessment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Written_Exam</fullName>
                <label>Written Exam</label>
            </value>
            <value>
                <fullName>Practical_Simulation</fullName>
                <label>Practical Simulation</label>
            </value>
            <value>
                <fullName>Case_Study_Review</fullName>
                <label>Case Study Review</label>
            </value>
            <value>
                <fullName>OSCE</fullName>
            </value>
            <value>
                <fullName>Panel_Review</fullName>
                <label>Panel Review</label>
            </value>
            <value>
                <fullName>Portfolio_Review</fullName>
                <label>Portfolio Review</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>