force-app/main/default/objects/Clinical_Assessment__c/fields/Assessor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Assessor_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assessor Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>