force-app/main/default/objects/Clinical_Assessment__c/fields/Attempt_Number__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Attempt Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>