force-app/main/default/objects/Clinical_Assessment__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Emergency_Medicine</fullName>
                <label>Emergency Medicine</label>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Radiology</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>ICU</fullName>
            </value>
            <value>
                <fullName>General_Medicine</fullName>
                <label>General Medicine</label>
            </value>
            <value>
                <fullName>Psychiatry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>