force-app/main/default/objects/Clinical_Assessment__c/fields/Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Job_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the clinical assessment to the specific job application.</description>
    <label>Job Application</label>
    <referenceTo>Job_Application__c</referenceTo>
    <relationshipLabel>Clinical Assessments</relationshipLabel>
    <relationshipName>ClinicalAssessments</relationshipName>
    <type>Lookup</type>
</CustomField>