force-app/main/default/objects/Clinical_Assessment__c/fields/Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Role_Type__c</fullName>
    <label>Role Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Surgeon</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Radiologist</fullName>
            </value>
            <value>
                <fullName>Lab_Technician</fullName>
                <label>Lab Technician</label>
            </value>
            <value>
                <fullName>Physiotherapist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>