force-app/main/default/objects/Clinical_Assessment__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>