force-app/main/default/objects/Clinical_Assessment__c/fields/Uploaded_File_Ids__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_File_Ids__c</fullName>
    <description>Stores comma-separated ContentDocumentIds uploaded for this clinical assessment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Uploaded File Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>