force-app/main/default/objects/Clinical_Assessment__c/recordTypes/Doctor_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Doctor_Assessment</fullName>
    <active>true</active>
    <label>Doctor Assessment</label>
</RecordType>