force-app/main/default/objects/Clinical_Assessment__c/recordTypes/Nurse_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Nurse_Assessment</fullName>
    <active>true</active>
    <label>Nurse Assessment</label>
</RecordType>